# cookiecutter-python

./: .drone.yml  .pre-commit-config.yaml  .travis.yml  Dockerfile.tests  Jenkinsfile  Makefile  Pipfile  README.md  cookiecutter.json  pyproject.toml  setup.cfg  tox.ini
hooks/: post_gen_project.py
tests/: test_cookiecutter_python.py
{{ cookiecutter.project_name }}/: .bumpversion.cfg  .drone.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile.tests  Jenkinsfile  Makefile  Pipfile  pyproject.toml  setup.cfg  setup.py  tox.ini
{{ cookiecutter.project_name }}/docs/source/: conf.py  index.rst
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_name }}/: __init__.py  cli.py
{{ cookiecutter.project_name }}/tests/: conftest.py  test_cli.py  test_{{ cookiecutter.project_name }}.py
