[tool.poetry]
name = "cookiecutter-python"
version = "0.1.0"
description = ""
authors = ["Marvin Steadfast <marvin@xsteadfastx.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
cookiecutter = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
tox = "^3.5"
black = "^18.9b0"
prospector = "^1.2"
bandit = "^1.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
